--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -30,7 +30,7 @@ jobs:
   publish_release:
     needs:
       - check-bump
-    if: needs.check-bump.outputs.is-publish
+    if: needs.check-bump.outputs.is-publish == 'true'
     permissions:
       contents: write
       pull-requests: read
@@ -51,7 +51,7 @@ jobs:
   update_release_draft:
     needs:
       - check-bump
-    if: needs.check-bump.output.is-draft
+    if: needs.check-bump.output.is-draft == 'true'
     permissions:
       contents: write
       pull-requests: read
