--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -30,14 +30,12 @@ jobs:
   publish_release:
     needs:
       - check-bump
-    if: needs.check-bump.outputs.is-publish == 'true'
+    if: needs.check-bump.outputs.is-publish == true
     permissions:
       contents: write
       pull-requests: read
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ needs.check-bump.outputs.is-publish }}
-      - run: echo ${{ needs.check-bump.outputs.is-draft }}
       - id: publish
         uses: release-drafter/release-drafter@v5
         env:
@@ -51,7 +49,7 @@ jobs:
   update_release_draft:
     needs:
       - check-bump
-    if: needs.check-bump.output.is-draft == 'true'
+    if: needs.check-bump.output.is-draft == true
     permissions:
       contents: write
       pull-requests: read
