--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -74,6 +74,8 @@ jobs:
           tag=${{ needs.update_release_draft.outputs.tag }}
           version=${tag:1}
           sed -i "s/^version=.+$/version=${version}/" libexec/anyenv---version
+          cat libexec/anyenv---version
+          git diff
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: bump/${{ needs.update_release_draft.outputs.tag }}
