--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -58,7 +58,6 @@ jobs:
     outputs:
       tag: ${{ steps.draft.outputs.tag_name }}
       body: ${{ steps.draft.outputs.body }}
-      url: ${{ steps.draft.outputs.html_url }}
   
   update_bump_pull_request:
     needs: 
@@ -75,18 +74,12 @@ jobs:
           version=${tag:1}
           sed -i "s/^version=.\+$/version=\"${version}\"/" libexec/anyenv---version
           git diff
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - uses: gr2m/create-or-update-pull-request-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          title: Release ${{ needs.update_release_draft.outputs.tag }}
+          body: ${{ needs.update_release_draft.outputs.body }}
           branch: bump/${{ needs.update_release_draft.outputs.tag }}
-          create_branch: true
-          commit_message: Release ${{ needs.update_release_draft.outputs.tag }}
-      - uses: repo-sync/pull-request@v2
-        with:
-          source_branch: bump/${{ needs.update_release_draft.outputs.tag }}
-          destination_branch: master
-          pr_title: Release ${{ needs.update_release_draft.outputs.tag }}
-          pr_body: |
-            ${{ needs.update_release_draft.outputs.body }}
-
-            See the release at: ${{ needs.update_release_draft.outputs.url }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "My commit message for uncommitted changes in lib/ folder"
+          update-pull-request-title-and-body: true
