--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -77,8 +77,9 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: bump/${{ needs.update_release_draft.outputs.tag }}
-          create_branch: true
           commit_message: Release ${{ needs.update_release_draft.outputs.tag }}
+          create_branch: true
+          push_options: '--force'
       - uses: repo-sync/pull-request@v2
         with:
           source_branch: bump/${{ needs.update_release_draft.outputs.tag }}
