--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -51,7 +51,10 @@ jobs:
     runs-on: macos-latest
     steps:
       - run: |
-          brew bump-formula-pr -n --url https://github.com/anyenv/anyenv/archive/${{ needs.publish_release.outputs.tag }}.tar.gz
+          set -xe
+          tag=${{ needs.publish_release.outputs.tag }}
+          tag=v1.1.4
+          brew bump-formula-pr -n --url https://github.com/anyenv/anyenv/archive/${tag}.tar.gz --fork-org anyenv --no-browse
   
   update_release_draft:
     needs:
